# Quill

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  QUILL_PROJECT_BRIEF.md  README.md  SECURITY.md  build.rs  pyproject.toml  quill-core.spec  quill_entry.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml  modes.yaml
core/: __init__.py  clipboard_monitor.py  config_loader.py  history.py  main.py  platform.py  prompt_builder.py  streamer.py  tutor.py
docs/superpowers/plans/: 2026-04-14-quill-slint-plan-01-foundation.md  2026-04-14-quill-slint-plan-02-state-engine.md  2026-04-14-quill-slint-plan-03-slint-mvp.md  2026-04-14-quill-slint-plan-04-expanded-tabs.md  2026-04-14-quill-slint-plan-05-floating-pencil.md  2026-04-14-quill-slint-plan-06-polish-ship.md
docs/superpowers/specs/: 2026-04-14-quill-slint-rewrite-design.md
platform_/: __init__.py
platform_/capture/: base.py  linux.py  macos.py  windows.py
platform_/context/: _app_map.py  base.py  linux.py  macos.py  windows.py
platform_/hotkey/: base.py  linux.py  macos.py  windows.py
platform_/permissions/: linux.py  macos.py
platform_/replace/: base.py  linux.py  macos.py  windows.py
providers/: __init__.py  base.py  generic.py  generic_endpoint.py  ollama.py  openai.py  openrouter.py
scripts/: build.sh  install-linux.sh  install-macos.sh  install-windows.ps1
src/: lib.rs  main.rs
src/core/: clipboard.rs  config.rs  history.rs  mod.rs  modes.rs  prompt.rs  think_filter.rs
src/engine/: compare.rs  hotkey_flow.rs  mod.rs  streaming.rs  tutor_flow.rs
src/platform/: capture.rs  caret.rs  context.rs  dwm_shadow.rs  hotkey.rs  mod.rs  replace.rs  traits.rs  tray.rs  uia.rs
src/providers/: claude_cli.rs  generic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/state/: app_state.rs  events.rs  mod.rs
src/ui/: bridge.rs  mod.rs  overlay_window.rs  palette_window.rs  pencil_controller.rs  pencil_window.rs  workspace_window.rs
src/ui/slint/: app_bridge.slint  main_window.slint  overlay.slint  palette.slint  pencil.slint  theme.slint  workspace.slint
src/ui/slint/components/: chain_row.slint  lang_row.slint  mode_row.slint  plume.slint  toast.slint
src/ui/slint/tabs/: compare.slint  history.slint  settings.slint  tutor.slint  voice.slint  write.slint
tests/: engine_integration.rs  platform_smoke.rs  test_config_loader.py  test_prompt_builder.py  test_providers.py
tests/common/: fakes.rs  mod.rs
tests/platform/: test_linux_capture.py  test_macos_capture.py  test_windows_capture.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  main.jsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  engine.rs  main.rs
ui/src-tauri/src/core/: clipboard.rs  config.rs  history.rs  hotkey.rs  mod.rs  modes.rs  prompt.rs  tutor.rs
ui/src-tauri/src/platform/: capture.rs  context.rs  mod.rs  replace.rs
ui/src-tauri/src/providers/: generic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
ui/src/common/: configCache.js
ui/src/components/: ComparisonView.jsx  DiffView.jsx  FirstRun.jsx  Overlay.jsx  PermissionPrompt.jsx  Settings.jsx  TutorPanel.jsx
ui/src/hooks/: useQuillBridge.js
ui/src/styles/: diff.css  firstrun.css  globals.css  overlay.css  settings.css  tutor.css
ui/src/utils/: detectLanguage.js  readability.js
ui/src/windows/: FullPanel.css  FullPanel.jsx  MiniOverlay.css  MiniOverlay.jsx
wix/: main.wxs
