[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quill"
version = "0.1.0"
description = "Privacy-first, model-agnostic AI writing assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "writing", "assistant", "cross-platform", "privacy"]

dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pyperclip>=1.8",
    "pynput>=1.7",
]

[project.optional-dependencies]
windows = [
    "pywinauto>=0.6",
    "pygetwindow>=0.0.9",
    "psutil>=5.9",
    "keyboard>=0.13",
]
macos = [
    "pyobjc-framework-AppKit>=10.0",
    "psutil>=5.9",
]
linux = [
    "keyboard>=0.13",
    "psutil>=5.9",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
quill = "core.main:cli_entry"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
