[package]
name = "quill"
version = "0.1.0"
description = "Privacy-first, model-agnostic AI writing assistant"
authors = ["Quill Contributors"]
license = "MIT"
repository = "https://github.com/mariesqu/Quill"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
