[package]
name = "quill"
version = "0.2.0"
description = "Privacy-first, model-agnostic AI writing assistant"
authors = ["Quill Contributors"]
license = "MIT"
repository = "https://github.com/mariesqu/Quill"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_yaml       = "0.9"
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.12", features = ["stream", "json"] }
futures-util     = "0.3"
rusqlite         = { version = "0.31", features = ["bundled"] }
async-trait      = "0.1"
anyhow           = "1"
dirs             = "5"
once_cell        = "1"
regex            = "1"
arboard          = "3"
enigo            = "0.2"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
